tmp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      imagePullSecrets:
      - name: myapp
      containers:
      - name: myapp
        image: cr.yandex/crpanu5p2i905gpj4g2s/alt@sha256:68e4335db60bd453b7a58a344db8b4fb2c32a58f54bc174c95529fb123df5ea3
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
