tmp/ingress-myapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: www.sarajkins.space
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
            path: /
